--- a/app/src/main/res/layout/activity_single_event.xml
+++ b/app/src/main/res/layout/activity_single_event.xml
@@ -6,7 +6,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".TestActivity">
-
+    <CheckBox
+        android:id="@+id/cbSingleType"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="订阅相同事件时使用最后一个,否则使用第一个"
+        android:checked="true"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -85,5 +94,5 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="粘性事件等待中" />
-    
+
 </LinearLayout>
