--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,4 +129,10 @@
         android:layout_height="wrap_content"
         android:text="测试"
         />
+    <Button
+        android:id="@+id/btOtherSingle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="测试单一事件"
+        />
 </LinearLayout>
